Added CMake config install for static library targets.

--- a/filament/CMakeLists.txt
+++ b/filament/CMakeLists.txt
@@ -374,16 +374,16 @@ list(APPEND DATA_BINS ${output_path})
 # ==================================================================================================
 # Includes & target definition
 # ==================================================================================================
-# specify where our headers are
-include_directories(${PUBLIC_HDR_DIR})
-include_directories(${GENERATION_ROOT})
-include_directories(src)
-
 # we're building a library
-add_library(${TARGET} STATIC ${PRIVATE_HDRS} ${PUBLIC_HDRS} ${SRCS} ${DATA_BINS})
+add_library(${TARGET} ${PRIVATE_HDRS} ${PUBLIC_HDRS} ${SRCS} ${DATA_BINS})
 
 # specify where the public headers of this library are
-target_include_directories(${TARGET} PUBLIC ${PUBLIC_HDR_DIR})
+target_include_directories(${TARGET}
+        PUBLIC
+        $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/include>
+        PRIVATE
+        $<BUILD_INTERFACE:${GENERATION_ROOT}>
+        $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/src>)
 
 # ==================================================================================================
 # Dependencies
@@ -461,11 +461,15 @@ target_link_libraries(${TARGET} PRIVATE
 # ==================================================================================================
 # Installation
 # ==================================================================================================
-set(INSTALL_TYPE ARCHIVE)
-install(TARGETS ${TARGET} ${INSTALL_TYPE} DESTINATION lib/${DIST_DIR})
 install(DIRECTORY ${PUBLIC_HDR_DIR}/filament DESTINATION include)
 install(FILES "README.md" DESTINATION .)
 install(FILES "../LICENSE" DESTINATION .)
+install(TARGETS ${TARGET}
+        EXPORT filamentTargetsExportSet
+        RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
+        LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}/${DIST_DIR}
+        ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}/${DIST_DIR}
+        INCLUDES DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
 
 # ==================================================================================================
 # Sub-projects
